--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "file-loader": "^1.1.4",
     "friendly-errors-webpack-plugin": "^1.6.1",
     "html-webpack-plugin": "^2.30.1",
+    "jquery": "^1.9.0",
     "less": "^3.0.1",
     "less-loader": "^4.1.0",
     "node-notifier": "^5.1.2",
@@ -52,7 +53,7 @@
     "webpack-bundle-analyzer": "^2.9.0",
     "webpack-dev-server": "^2.9.1",
     "webpack-merge": "^4.1.0",
-    "jquery" : "^1.9.0"
+    "weixin-js-sdk": "^1.3.2"
   },
   "engines": {
     "node": ">= 6.0.0",
